# fast_reading

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: release.yml
src/: lib.rs
src/fast_reading/: __init__.py  _core.pyi
tests/: speedup.py
