[project]
name = "fast-reading"
description = "A fast reading file library for Python"
readme = "README.md"
authors = [{ name = "vffuunnyy", email = "vffuunnyy@gmail.com" }]
keywords = [
    "python",
    "rust",
    "pyo3",
    "file",
    "read",
    "reading",
    "readline",
    "readlines",
    "readall",
    "readallline",
    "readalllines",
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = []
dynamic = ["version"]

[project.scripts]
fast-reading = "fast_reading:main"

[tool.maturin]
module-name = "fast_reading._core"
python-packages = ["fast_reading"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
